kubernetes/kubeinvaders-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: $(MY_NAMESPACE)
  name: $(MY_NAMESPACE)
