kubernetes/kubeinvaders-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubeinvaders
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: $(ROUTE_HOST)
    http:
      paths:
      - path: /
        backend:
          serviceName: kubeinvaders
          servicePort: 80
